<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/main_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_300"
        android:background="#74D3F8"
        />
    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/dp_500"
        android:layout_height="@dimen/dp_210"
        android:layout_marginLeft="@dimen/sp_40"
        android:layout_marginTop="-1dp"
        android:layout_marginRight="@dimen/sp_40"
        android:scaleType="centerCrop"
        android:src="@drawable/image"
        />
    <TextView
        android:id="@+id/text1"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_200"
        android:layout_below="@+id/main_text"
        android:drawableTop="@drawable/baseline_edit_calendar_24"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:paddingTop="@dimen/sp_20"
        android:layout_marginTop="-68dp"
        android:background="#FFEA2E"
        android:text="@string/mark_attendance"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_200"
        android:layout_below="@+id/main_text"
        android:drawableTop="@drawable/baseline_grading_24"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="-70dp"
        android:layout_toEndOf="@+id/text1"
        android:padding="@dimen/sp_20"
        android:text="@string/show_attendance"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:background="#FB0B63"
        />
    <TextView
        android:id="@+id/text3"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_200"
        android:layout_below="@+id/main_text"
        android:layout_centerVertical="true"
        android:drawableTop="@drawable/baseline_menu_book_24"
        android:paddingTop="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="-70dp"
        android:layout_toEndOf="@+id/text2"
        android:text="@string/home_work"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:background="#08A2EC"
        />
    <TextView
        android:id="@+id/gallery"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_60"
        android:layout_below="@id/main_text"
        android:layout_marginStart="@dimen/sp_30"
        android:layout_marginTop="225dp"
        android:drawableRight="@drawable/baseline_image_24"
        android:layout_marginEnd="@dimen/sp_30"
        android:layout_marginBottom="@dimen/sp_30"
        android:background="#F4C7D6"
        android:textColor="#EC125C"
        android:text="@string/gallery"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/pay_fee"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_60"
        android:layout_below="@id/gallery"
        android:layout_marginStart="@dimen/sp_30"
        android:drawableRight="@drawable/baseline_currency_rupee_24"
        android:background="#D0E9FD"
        android:text="@string/pay_fee"
        android:textColor="#3F51B5"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/notice"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_60"
        android:layout_below="@id/main_text"
        android:layout_alignBaseline="@id/gallery"
        android:layout_marginTop="227dp"
        android:layout_toEndOf="@id/gallery"
        android:drawableRight="@drawable/baseline_email_24"
        android:background="#B5F8B8"
        android:textColor="#4CAF50"
        android:gravity="center_horizontal"
        android:text="@string/notice"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/About"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_60"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/pay_fee"
        android:layout_alignBaseline="@+id/pay_fee"
        android:background="#FFC3BE"
        android:drawableRight="@drawable/baseline_help_24"
        android:text="@string/about"
        android:textColor="#F44336"
        android:textAlignment="center"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        />
</RelativeLayout>
