<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_50"
        app:layout_constraintGuide_percent="0.50"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_40"
        app:layout_constraintGuide_percent=".40"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_35"
        app:layout_constraintGuide_percent=".35"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_10"
        app:layout_constraintGuide_percent=".1"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/h_gd_60"
        app:layout_constraintGuide_percent=".60"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_65"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".65"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_75"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/v_gd_5"
        app:layout_constraintGuide_percent=".02"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/v_gd_30"
        app:layout_constraintGuide_percent=".30"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@id/v_gd_40"
        app:layout_constraintGuide_percent=".35"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/v_gd_65"
        app:layout_constraintGuide_percent=".65"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@id/v_gd_70"
        app:layout_constraintGuide_percent=".70"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/v_gd_98"
        app:layout_constraintGuide_percent=".98"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/v_gd_50"
        app:layout_constraintGuide_percent=".50"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/v_gd_55"
        app:layout_constraintGuide_percent=".55"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/h_gd_80"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/h_gd_90"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".90"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/h_gd_50"
        app:layout_constraintBottom_toBottomOf="@+id/h_gd_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#63C7F4"/>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/image"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="@+id/h_gd_10"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableTop="@drawable/baseline_calendar_month_24"
        android:background="#FFEA2E"
        android:text="@string/mark_attendance"
        android:textAlignment="center"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/h_gd_35"
        app:layout_constraintBottom_toBottomOf="@+id/h_gd_60"
        app:layout_constraintStart_toStartOf="@+id/v_gd_5"
        app:layout_constraintEnd_toEndOf="@id/v_gd_30"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FB0B63"
        android:drawableTop="@drawable/baseline_grading_24"
        android:text="@string/show_attendance"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_60"
        app:layout_constraintEnd_toEndOf="@+id/v_gd_65"
        app:layout_constraintStart_toStartOf="@+id/v_gd_40"
        app:layout_constraintTop_toTopOf="@+id/h_gd_35" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#08A2EC"
        android:drawableTop="@drawable/baseline_menu_book_24"
        android:text="@string/home_work"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/sp_30"
        app:layout_constraintTop_toTopOf="@id/h_gd_35"
        app:layout_constraintBottom_toBottomOf="@+id/h_gd_60"
        app:layout_constraintStart_toStartOf="@+id/v_gd_70"
        app:layout_constraintEnd_toEndOf="@+id/v_gd_98"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/gallery"
        android:textStyle="bold"
        android:background="#F4C7D6"
        android:drawableTop="@drawable/baseline_image_24"
        android:textSize="@dimen/sp_30"
        android:textColor="#EC125C"
      app:layout_constraintTop_toTopOf="@id/h_gd_65"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_75"
        app:layout_constraintStart_toStartOf="@id/v_gd_5"
        app:layout_constraintEnd_toEndOf="@id/v_gd_50"         />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/notice"
        android:background="#B5F8B8"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        android:textColor="#4CAF50"
        android:drawableRight="@drawable/baseline_email_24"
        app:layout_constraintTop_toTopOf="@+id/h_gd_65"
        app:layout_constraintBottom_toBottomOf="@+id/h_gd_75"
        app:layout_constraintStart_toStartOf="@+id/v_gd_55"
        app:layout_constraintEnd_toEndOf="@+id/v_gd_98"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/pay_fee"
            android:textSize="@dimen/sp_30"
            android:textStyle="bold"
            android:textColor="#3F51B5"
            android:drawableRight="@drawable/baseline_currency_rupee_24"
            android:background="#D0E9FD"
            app:layout_constraintTop_toTopOf="@+id/h_gd_80"
            app:layout_constraintBottom_toBottomOf="@id/h_gd_90"
            app:layout_constraintStart_toStartOf="@id/v_gd_5"
            app:layout_constraintEnd_toEndOf="@id/v_gd_50"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/about"
        android:background="#FFC3BE"
        android:textStyle="bold"
        android:textSize="@dimen/sp_30"
        android:textColor="#F44336"
        android:drawableRight="@drawable/baseline_help_24"
        app:layout_constraintTop_toTopOf="@id/h_gd_80"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_90"
        app:layout_constraintStart_toStartOf="@id/v_gd_55"
        app:layout_constraintEnd_toEndOf="@id/v_gd_98"/>
</androidx.constraintlayout.widget.ConstraintLayout>